# cuda-oxide

./: .gitignore  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: clippy.yml  docs.yml  examples-compile.yml  unit-tests.yml
crates/cargo-oxide/: Cargo.toml  README.md
crates/cargo-oxide/src/: backend.rs  commands.rs  main.rs
crates/cuda-async/: Cargo.toml
crates/cuda-async/src/: device_context.rs  device_future.rs  reclaim.rs
crates/cuda-bindings/: Cargo.toml
crates/cuda-core/: Cargo.toml  README.md
crates/cuda-core/src/: device_buffer.rs  embedded.rs  error.rs  memory.rs  module.rs  peer.rs  stream.rs  vmm.rs
crates/cuda-core/tests/: device_buffer.rs
crates/cuda-device/: Cargo.toml
crates/cuda-device/src/: atomic.rs  constant.rs  cooperative_groups.rs  debug.rs  disjoint.rs  fence.rs  thread.rs
crates/cuda-host/: Cargo.toml  README.md
crates/cuda-host/src/: embedded.rs  launch.rs  lib.rs  ltoir.rs
crates/cuda-host/tests/: cuda_module_api.rs
crates/cuda-macros/: Cargo.toml
crates/cuda-macros/src/: lib.rs
crates/dialect-mir/: Cargo.toml
crates/dialect-mir/src/ops/: memory.rs
crates/dialect-nvvm/: Cargo.toml
crates/dialect-nvvm/src/ops/: debug.rs  warp.rs
crates/fuzzer/: Cargo.toml
crates/libnvvm-sys/: Cargo.toml  README.md
crates/libnvvm-sys/src/: lib.rs
crates/llvm-export/: Cargo.toml
crates/llvm-export/src/: lib.rs  pointer_facts.rs
crates/llvm-export/src/export/: config.rs  function.rs  metadata.rs  mod.rs  module.rs  ops.rs  state.rs  typed.rs  types.rs
crates/llvm-export/tests/: export_test.rs  ops_test.rs
crates/llvm-export/tests/common/: mod.rs
crates/mir-importer/: Cargo.toml
crates/mir-importer/src/: lib.rs  llvm_tools.rs  pipeline.rs
crates/mir-importer/src/translator/: body.rs  mod.rs  rvalue.rs  statement.rs  types.rs  values.rs
crates/mir-lower/: Cargo.toml
crates/mir-lower/src/: conversion_interface.rs  lowering.rs
crates/mir-lower/src/convert/: types.rs
crates/mir-lower/src/convert/intrinsics/: basic.rs  (+10 more)
crates/nvjitlink-sys/: Cargo.toml  README.md
crates/nvjitlink-sys/src/: lib.rs
crates/oxide-artifacts/: Cargo.toml  README.md
crates/oxide-artifacts/src/: lib.rs
crates/reserved-oxide-symbols/: Cargo.toml
crates/rustc-codegen-cuda/: Cargo.toml  README.md  rust-toolchain.toml
crates/rustc-codegen-cuda/examples/aggregate_place_perf_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/atomic_f16/: Cargo.toml  README.md  run-bench.sh
crates/rustc-codegen-cuda/examples/atomic_f16/src/: main.rs
crates/rustc-codegen-cuda/examples/atomic_f16/traces/: atomic_f16_bench.csv
crates/rustc-codegen-cuda/examples/atomics/: README.md
crates/rustc-codegen-cuda/examples/complex_mul/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/complex_mul/src/: main.rs
crates/rustc-codegen-cuda/examples/constant_memory/: Cargo.toml
crates/rustc-codegen-cuda/examples/constant_memory_simple/: Cargo.toml
crates/rustc-codegen-cuda/examples/cross_crate_embedded/: Cargo.toml
crates/rustc-codegen-cuda/examples/cross_crate_embedded/kernel-lib/: Cargo.toml
crates/rustc-codegen-cuda/examples/cross_crate_embedded/kernel-lib/src/: lib.rs
crates/rustc-codegen-cuda/examples/cross_crate_embedded/src/: main.rs
crates/rustc-codegen-cuda/examples/cutile_inter_kernel/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/cutile_inter_kernel/.cargo/: config.toml
crates/rustc-codegen-cuda/examples/cutile_inter_kernel/simt/: Cargo.toml
crates/rustc-codegen-cuda/examples/cutile_inter_kernel/simt/src/: main.rs
crates/rustc-codegen-cuda/examples/cutile_inter_kernel/src/: main.rs
crates/rustc-codegen-cuda/examples/host_closure/: Cargo.toml
crates/rustc-codegen-cuda/examples/host_closure/src/: main.rs
crates/rustc-codegen-cuda/examples/issue150_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/manual_launch_libdevice/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/math_atan/: Cargo.toml  README.md
crates/rustc-codegen-cuda/src/: collector.rs  device_codegen.rs  lib.rs
cuda-oxide-book/appendix/: building-from-source.md  supported-features.md
cuda-oxide-book/compiler/: lowering-pipeline.md  rustc-public.md
cuda-oxide-book/getting-started/: hello-gpu.md  installation.md
cuda-oxide-book/gpu-programming/: error-handling-and-debugging.md  launching-kernels.md
scripts/: smoketest.sh
(+35 files in other folders)
