[package]
name = "atomic_f16"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
default-run = "atomic_f16"

# Standalone crate (not part of parent workspace).
[workspace]

# Demonstrates DeviceAtomicF16 (`atom.add.noftz.f16`).
# Build/run with:  cargo oxide run atomic_f16 --arch sm_103
[[bin]]
name = "atomic_f16"
path = "src/main.rs"

# Opt-in microbenchmark for f32 vs f16 global atomic add throughput.
# Run via ./run-bench.sh.
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
