[package]
name = "complex_mul"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Regression test for issue #35: arithmetic-trait `Output` associated types on
# aggregate operands (e.g. a complex number). Build with:
#   cargo oxide run complex_mul

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
