[package]
name = "cross_crate_embedded"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Standalone workspace so the nested kernel-lib crate can be a workspace member.
[workspace]
members = ["kernel-lib"]

[dependencies]
kernel-lib   = { path = "kernel-lib" }
cuda-device  = { path = "../../../cuda-device" }
cuda-host    = { path = "../../../cuda-host" }
cuda-core    = { path = "../../../cuda-core" }
