[package]
name = "host_closure"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

[workspace]

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host", features = ["async"] }
cuda-core = { path = "../../../cuda-core" }
cuda-async = { path = "../../../cuda-async" }
