[package]
name = "cutile_inter_kernel_simt"
version = "0.1.0"
edition = "2024"
authors = ["NVIDIA CORPORATION"]
license = "Apache-2.0"

[workspace]
resolver = "2"

[dependencies]
cuda-device = { path = "../../../../cuda-device" }
cuda-host = { path = "../../../../cuda-host" }
cuda-core = { path = "../../../../cuda-core" }
